test/fail/annotations-class.grace
class name.new is ann {}
